fix(client): fix spinner behavior on safari

--- a/client/src/app/modules/player/player.page.scss
+++ b/client/src/app/modules/player/player.page.scss
@@ -1,10 +1,3 @@
-mat-spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    zoom: 0.5;
-}
 ::ng-deep mat-tab-header {
     margin: -16px -16px 0;
 }
